fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Verplaatsen naar <em>{{ location }}</em>",
   "Search collections & documents": "Zoeken in collecties en documenten",
   "No results found": "Geen resultaten gevonden",
+  "Document options": "Documentopties",
   "New": "Nieuw",
   "Only visible to you": "Alleen zichtbaar voor jou",
   "Draft": "Concept",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "Geen",
   "Delete embed": "Insluiting verwijderen",
+  "Rename": "Hernoem",
   "Could not import file": "Kon bestand niet importeren",
   "Unsubscribed from document": "Afgemeld voor document",
   "Unsubscribed from collection": "Afgemeld voor collectie",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z sorteren",
   "Z-A sort": "Z-A sorteren",
   "Manual sort": "Sorteer handmatig",
-  "Rename": "Hernoem",
   "Collection menu": "Collectie menu",
   "Comment options": "Opties voor reageren",
   "Enable viewer insights": "Schakel viewer inzichten uit",
   "Enable embeds": "Embeds inschakelen",
-  "Document options": "Documentopties",
   "File": "Bestand",
-  "Group member options": "Opties voor groepslid",
   "Group members": "Groepeer leden",
   "Edit group": "Wijzig groep",
   "Delete group": "Verwijder groep",
@@ -983,6 +982,7 @@
   "Search people": "Personen zoeken",
   "No people matching your search": "Geen personen die aan de zoekopdracht voldoen",
   "No people left to add": "Geen personen meer om toe te voegen",
+  "Member": "Member",
   "Date created": "Aanmaakdatum",
   "Crop Image": "Afbeelding bijsnijden",
   "Crop image": "Afbeelding bijsnijden",
