fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
   "Search collections & documents": "Procurar coleções e documentos",
   "No results found": "Nenhum resultado encontrado",
+  "Document options": "Opções do documento",
   "New": "Novo",
   "Only visible to you": "Apenas visível para ti",
   "Draft": "Rascunho",
@@ -541,6 +542,7 @@
   "Video": "Vídeo",
   "None": "Nenhum",
   "Delete embed": "Delete embed",
+  "Rename": "Renomear",
   "Could not import file": "Não foi possível importar o ficheiro",
   "Unsubscribed from document": "Desinscrever do documento",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z sort",
   "Z-A sort": "Z-A sort",
   "Manual sort": "Ordenação manual",
-  "Rename": "Renomear",
   "Collection menu": "Menu de coleções",
   "Comment options": "Opções de comentário",
   "Enable viewer insights": "Habilitar estatísticas do utilizador",
   "Enable embeds": "Ativar embeds",
-  "Document options": "Opções do documento",
   "File": "File",
-  "Group member options": "Opções de membros do grupo",
   "Group members": "Membros do grupo",
   "Edit group": "Editar grupo",
   "Delete group": "Apagar grupo",
@@ -983,6 +982,7 @@
   "Search people": "Procurar pessoas",
   "No people matching your search": "Nenhuma pessoa corresponde à sua pesquisa",
   "No people left to add": "Não sobrou ninguém para adicionar",
+  "Member": "Member",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
