fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
   "Search collections & documents": "Sök i samlingar och dokument",
   "No results found": "Inga resultat hittades",
+  "Document options": "Dokumentalternativ",
   "New": "Ny",
   "Only visible to you": "Endast synlig för dig",
   "Draft": "Utkast",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "Ingen",
   "Delete embed": "Delete embed",
+  "Rename": "Döp om",
   "Could not import file": "Kan inte importera fil",
   "Unsubscribed from document": "Prenumeration avslutad från dokument",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z sort",
   "Z-A sort": "Z-A sort",
   "Manual sort": "Manuell sortering",
-  "Rename": "Döp om",
   "Collection menu": "Samlingsmeny",
   "Comment options": "Alternativ för kommentarer",
   "Enable viewer insights": "Aktivera tittarinsikter",
   "Enable embeds": "Aktivera inbäddningar",
-  "Document options": "Dokumentalternativ",
   "File": "File",
-  "Group member options": "Alternativ för gruppmedlemmar",
   "Group members": "Gruppmedlemmar",
   "Edit group": "Redigera grupp",
   "Delete group": "Radera grupp",
@@ -983,6 +982,7 @@
   "Search people": "Sök efter personer",
   "No people matching your search": "Inga personer matchar din sökning",
   "No people left to add": "Inga personer kvar att lägga till",
+  "Member": "Member",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
