fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "<em>{{ location }}</em>'ye kopyala",
   "Search collections & documents": "Koleksiyonlarda ve belgelerde arama yapın",
   "No results found": "Sonuç bulunamadı",
+  "Document options": "Belge ayarları",
   "New": "Yeni",
   "Only visible to you": "Sadece sana görünür",
   "Draft": "Taslak",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
+  "Rename": "Rename",
   "Could not import file": "Dosya içe aktarılamadı",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z sort",
   "Z-A sort": "Z-A sort",
   "Manual sort": "Manuel sıralama",
-  "Rename": "Rename",
   "Collection menu": "Koleksiyon menüsü",
   "Comment options": "Yorum seçenekleri",
   "Enable viewer insights": "İzleyici analizlerini etkinleştir",
   "Enable embeds": "Yerleştirmeleri etkinleştir",
-  "Document options": "Belge ayarları",
   "File": "File",
-  "Group member options": "Grup üyesi seçenekleri",
   "Group members": "Grup üyeleri",
   "Edit group": "Grubu düzenle",
   "Delete group": "Grubu sil",
@@ -983,6 +982,7 @@
   "Search people": "Kişi ara",
   "No people matching your search": "Aramanızla eşleşen kişi yok",
   "No people left to add": "Eklenecek kişi kalmadı",
+  "Member": "Member",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
