--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
   "Search collections & documents": "Пошук колекцій і документів",
   "No results found": "Результатів не знайдено",
+  "Document options": "Налаштування документа",
   "New": "Новий",
   "Only visible to you": "Видно лише вам",
   "Draft": "Чернетка",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
+  "Rename": "Rename",
   "Could not import file": "Не вдалося імпортувати файл",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z sort",
   "Z-A sort": "Z-A sort",
   "Manual sort": "Ручне сортування",
-  "Rename": "Rename",
   "Collection menu": "Меню колекцій",
   "Comment options": "Налаштування коментарів",
   "Enable viewer insights": "Увімкнути статистику перегляду",
   "Enable embeds": "Увімкнути вкладення",
-  "Document options": "Налаштування документа",
   "File": "File",
-  "Group member options": "Налаштування учасників групи",
   "Group members": "Учасники групи",
   "Edit group": "Редагувати групу",
   "Delete group": "Видалити групу",
@@ -983,6 +982,7 @@
   "Search people": "Пошук користувачів",
   "No people matching your search": "Немає користувачів за вашим пошуковим запитом",
   "No people left to add": "Немає користувачів, щоб додати",
+  "Member": "Member",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
