fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "复制到 <em>{{ location }}</em>",
   "Search collections & documents": "搜索文档集和文档",
   "No results found": "未找到结果",
+  "Document options": "文档选项",
   "New": "新",
   "Only visible to you": "仅自己可见",
   "Draft": "草稿",
@@ -541,6 +542,7 @@
   "Video": "视频",
   "None": "空",
   "Delete embed": "删除嵌入",
+  "Rename": "重命名",
   "Could not import file": "无法导入文件",
   "Unsubscribed from document": "取消订阅文档",
   "Unsubscribed from collection": "取消订阅集合",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z 排序",
   "Z-A sort": "Z-A 排序",
   "Manual sort": "手动排序",
-  "Rename": "重命名",
   "Collection menu": "文档集菜单",
   "Comment options": "评论选项",
   "Enable viewer insights": "启用浏览者统计",
   "Enable embeds": "启用嵌入",
-  "Document options": "文档选项",
   "File": "文件",
-  "Group member options": "群组成员选项",
   "Group members": "群组成员",
   "Edit group": "编辑群组",
   "Delete group": "删除群组",
@@ -983,6 +982,7 @@
   "Search people": "搜索用户",
   "No people matching your search": "没有符合搜索条件的用户",
   "No people left to add": "没有人可以添加",
+  "Member": "Member",
   "Date created": "创建日期",
   "Crop Image": "裁剪图像",
   "Crop image": "裁剪图像",
