fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "複製到<em>{{ location }}</em>",
   "Search collections & documents": "搜尋文件集與文件",
   "No results found": "找不到任何結果",
+  "Document options": "文件選項",
   "New": "新",
   "Only visible to you": "只有您可以檢視",
   "Draft": "草稿",
@@ -541,6 +542,7 @@
   "Video": "影片",
   "None": "無",
   "Delete embed": "Delete embed",
+  "Rename": "重新命名",
   "Could not import file": "無法匯入檔案",
   "Unsubscribed from document": "取消訂閱文件",
   "Unsubscribed from collection": "取消訂閱文件",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z排列",
   "Z-A sort": "Z-A排列",
   "Manual sort": "手動排序",
-  "Rename": "重新命名",
   "Collection menu": "文件集選單",
   "Comment options": "評論選項",
   "Enable viewer insights": "啟用瀏覽者洞察分析",
   "Enable embeds": "啟用嵌入物件",
-  "Document options": "文件選項",
   "File": "File",
-  "Group member options": "群組成員選項",
   "Group members": "群組成員",
   "Edit group": "編輯群組",
   "Delete group": "刪除群組",
@@ -983,6 +982,7 @@
   "Search people": "搜尋使用者",
   "No people matching your search": "找不到符合搜尋條件的使用者",
   "No people left to add": "所有人員都已經被新增",
+  "Member": "Member",
   "Date created": "創建日期",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
