fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Sao chép đến <em>{{ location }}</em>",
   "Search collections & documents": "Tìm kiếm bộ sưu tập và tài liệu",
   "No results found": "Không tìm thấy kết quả",
+  "Document options": "Tùy chọn tài liệu",
   "New": "Mới",
   "Only visible to you": "Chỉ hiển thị với bạn",
   "Draft": "Bản nháp",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "Không",
   "Delete embed": "Xóa phần nhúng",
+  "Rename": "Đổi tên",
   "Could not import file": "Không thể nhập file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -562,14 +564,11 @@
   "A-Z sort": "Từ A-Z",
   "Z-A sort": "Từ Z-A",
   "Manual sort": "Sắp xếp thủ công",
-  "Rename": "Đổi tên",
   "Collection menu": "Menu bộ sưu tập",
   "Comment options": "Tùy chọn bình luận",
   "Enable viewer insights": "Bật thông tin chi tiết về người xem",
   "Enable embeds": "Bật tính năng nhúng",
-  "Document options": "Tùy chọn tài liệu",
   "File": "Tập tin",
-  "Group member options": "Tùy chọn thành viên nhóm",
   "Group members": "Thành viên trong nhóm",
   "Edit group": "Chỉnh sửa nhóm",
   "Delete group": "Xóa nhóm",
@@ -983,6 +982,7 @@
   "Search people": "Tìm kiếm thành viên",
   "No people matching your search": "Không có người nào phù hợp với tìm kiếm của bạn",
   "No people left to add": "Không còn người để thêm",
+  "Member": "Member",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
