fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Copiar para <em>{{ location }}</em>",
   "Search collections & documents": "Pesquisar coleções e documentos",
   "No results found": "Nenhum resultado encontrado",
+  "Document options": "Opções do documento",
   "New": "Novo",
   "Only visible to you": "Visível apenas para você",
   "Draft": "Rascunho",
@@ -541,6 +542,7 @@
   "Video": "Vídeo",
   "None": "Nada",
   "Delete embed": "Deletar embed",
+  "Rename": "Renomear",
   "Could not import file": "Não foi possível importar o arquivo",
   "Unsubscribed from document": "Cancelada inscrição do documento",
   "Unsubscribed from collection": "Cancelada inscrição da coleção",
@@ -562,14 +564,11 @@
   "A-Z sort": "Ordenar A-Z",
   "Z-A sort": "Ordenar Z-A",
   "Manual sort": "Ordenação manual",
-  "Rename": "Renomear",
   "Collection menu": "Menu da coleção",
   "Comment options": "Opções de comentário",
   "Enable viewer insights": "Habilitar Estatísticas de Visualização",
   "Enable embeds": "Habilitar incorporações",
-  "Document options": "Opções do documento",
   "File": "File",
-  "Group member options": "Opções de membros do grupo",
   "Group members": "Membros do grupo",
   "Edit group": "Editar grupo",
   "Delete group": "Remover grupo",
@@ -983,6 +982,7 @@
   "Search people": "Procurar pessoas",
   "No people matching your search": "Nenhuma pessoa corresponde à sua pesquisa",
   "No people left to add": "Nenhuma pessoa restante para adicionar",
+  "Member": "Member",
   "Date created": "Data de criação",
   "Crop Image": "Cortar imagem",
   "Crop image": "Cortar imagem",
