fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
   "Search collections & documents": "Telusuri koleksi & dokumen",
   "No results found": "Tak ditemukan hasil",
+  "Document options": "Opsi dokumen",
   "New": "Baru",
   "Only visible to you": "Hanya terlihat untuk Anda",
   "Draft": "Draf",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
+  "Rename": "Rename",
   "Could not import file": "Tidak dapat mengimpor berkas",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z sort",
   "Z-A sort": "Z-A sort",
   "Manual sort": "Pengurutan manual",
-  "Rename": "Rename",
   "Collection menu": "Menu koleksi",
   "Comment options": "Opsi komentar",
   "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Aktifkan penyematan",
-  "Document options": "Opsi dokumen",
   "File": "File",
-  "Group member options": "Opsi anggota grup",
   "Group members": "Anggota grup",
   "Edit group": "Sunting grup",
   "Delete group": "Hapus grup",
@@ -983,6 +982,7 @@
   "Search people": "Cari orang",
   "No people matching your search": "Tak ada orang yang cocok dengan pencarian Anda",
   "No people left to add": "Tak ada orang lagi yang dapat ditambahkan",
+  "Member": "Member",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
