fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
   "Search collections & documents": "جستجوی مجموعه ها و اسناد",
   "No results found": "No results found",
+  "Document options": "گزینه‌های سند",
   "New": "جدید",
   "Only visible to you": "تنها قابل مشاهده برای شما",
   "Draft": "پیش‌نویس",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
+  "Rename": "Rename",
   "Could not import file": "نمی‌توان فایل را وارد کرد",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z sort",
   "Z-A sort": "Z-A sort",
   "Manual sort": "مرتب‌سازی دستی",
-  "Rename": "Rename",
   "Collection menu": "Collection menu",
   "Comment options": "Comment options",
   "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "فعال‌سازی جاسازی‌ها",
-  "Document options": "گزینه‌های سند",
   "File": "File",
-  "Group member options": "گزینه‌های عضو گروه",
   "Group members": "اعضای گروه",
   "Edit group": "ویرایش گروه",
   "Delete group": "حذف گروه",
@@ -983,6 +982,7 @@
   "Search people": "جستجوی افراد",
   "No people matching your search": "فردی با جستجوی شما مطابقت ندارد",
   "No people left to add": "فردی برای افزودن باقی نمانده است",
+  "Member": "Member",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
