fix: New Thai translations from Crowdin [ci skip]

--- a/shared/i18n/locales/th_TH/translation.json
+++ b/shared/i18n/locales/th_TH/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
   "Search collections & documents": "Search collections & documents",
   "No results found": "No results found",
+  "Document options": "ตัวเลือกเอกสาร",
   "New": "สร้าง",
   "Only visible to you": "เฉพาะคุณเท่านั้นที่เห็นสิ่งนี้",
   "Draft": "ฉบับร่าง",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
+  "Rename": "Rename",
   "Could not import file": "ไม่สามารถนำเข้าไฟล์ได้",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Z sort",
   "Z-A sort": "Z-A sort",
   "Manual sort": "เรียงลำดับด้วยตนเอง",
-  "Rename": "Rename",
   "Collection menu": "Collection menu",
   "Comment options": "Comment options",
   "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Enable embeds",
-  "Document options": "ตัวเลือกเอกสาร",
   "File": "File",
-  "Group member options": "ตัวเลือกสมาชิกกลุ่ม",
   "Group members": "Group members",
   "Edit group": "แก้ไขกลุ่ม",
   "Delete group": "ลบกลุ่ม",
@@ -983,6 +982,7 @@
   "Search people": "ค้นหาผู้คน",
   "No people matching your search": "ไม่มีคนที่ตรงกับการค้นหาของคุณ",
   "No people left to add": "ไม่มีคนเหลือให้เพิ่ม",
+  "Member": "Member",
   "Date created": "Date created",
   "Crop Image": "Crop Image",
   "Crop image": "Crop image",
