fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -224,6 +224,7 @@
   "Copy to <em>{{ location }}</em>": "Kopier til <em>{{ location }}</em>",
   "Search collections & documents": "Søk i samlinger og dokumenter",
   "No results found": "Ingen resultater funnet",
+  "Document options": "Dokumentalternativer",
   "New": "Ny",
   "Only visible to you": "Bare synlig for deg",
   "Draft": "Utkast",
@@ -541,6 +542,7 @@
   "Video": "Video",
   "None": "Ingen",
   "Delete embed": "Slett embed",
+  "Rename": "Gi nytt navn",
   "Could not import file": "Kunne ikke importere fil",
   "Unsubscribed from document": "Avsluttet abonnement fra dokument",
   "Unsubscribed from collection": "Avsluttet abonnement fra samling",
@@ -562,14 +564,11 @@
   "A-Z sort": "A-Å sortering",
   "Z-A sort": "Å-A sortering",
   "Manual sort": "Manuell sortering",
-  "Rename": "Gi nytt navn",
   "Collection menu": "Samlingsmeny",
   "Comment options": "Kommentaralternativer",
   "Enable viewer insights": "Aktiver leserinnsikt",
   "Enable embeds": "Aktiver innebygginger",
-  "Document options": "Dokumentalternativer",
   "File": "Fil",
-  "Group member options": "Gruppemedlemalternativer",
   "Group members": "Gruppemedlemmer",
   "Edit group": "Rediger gruppe",
   "Delete group": "Slett gruppe",
@@ -983,6 +982,7 @@
   "Search people": "Søk i personer",
   "No people matching your search": "Ingen personer matcher søket ditt",
   "No people left to add": "Ingen flere personer å legge til",
+  "Member": "Member",
   "Date created": "Dato opprettet",
   "Crop Image": "Beskjær bilde",
   "Crop image": "Beskjær bilde",
