fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -604,7 +604,7 @@
   "mentioned you in": "nevnte deg i",
   "left a comment on": "la igjen en kommentar på",
   "resolved a comment on": "løste en kommentar på",
-  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
+  "reacted {{ emoji }} to your comment on": "reagerte med {{ emoji }} til din kommentar på",
   "shared": "delt",
   "invited you to": "inviterte deg til",
   "Choose a date": "Velg en dato",
@@ -982,7 +982,7 @@
   "Search people": "Søk i personer",
   "No people matching your search": "Ingen personer matcher søket ditt",
   "No people left to add": "Ingen flere personer å legge til",
-  "Member": "Member",
+  "Member": "Medlem",
   "Date created": "Dato opprettet",
   "Crop Image": "Beskjær bilde",
   "Crop image": "Beskjær bilde",
