fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -982,7 +982,7 @@
   "Search people": "사용자 검색",
   "No people matching your search": "찾으시는 사용자가 없습니다.",
   "No people left to add": "추가할 사용자가 없습니다",
-  "Member": "Member",
+  "Member": "멤버",
   "Date created": "생성 일자",
   "Crop Image": "이미지 자르기",
   "Crop image": "이미지 자르기",
