--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -316,8 +316,11 @@
   "Change Language": "Change Language",
   "Dismiss": "Dismiss",
   "Lightbox": "Lightbox",
-  "View, navigate or download images contained in the doc": "View, navigate or download images contained in the doc",
+  "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Close",
+  "Previous": "Previous",
+  "Next": "Next",
+  "Image failed to load": "Image failed to load",
   "You’re offline.": "You’re offline.",
   "Sorry, an error occurred.": "Sorry, an error occurred.",
   "Click to retry": "Click to retry",
